Accepted solution tick fixed + Redirection on sign up

--- a/tmpl/Error404.tmpl
+++ b/tmpl/Error404.tmpl
@@ -40,7 +40,7 @@
 						'transparent'
 					);
 	
-					appendOrnament($('#ornament'), 3, 12, block_dimensions, color_set)
+					appendOrnament($('#ornament'), 3, 12, block_dimensions, null, color_set)
 				});
 			</script>
 		<% end template %>
