Saros night session

--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -23,7 +23,7 @@
 			<% include template_view::javascript_code() %>
 			<script>
 			$(document).ready(function() {
-				configureValidator([
+			/*	configureValidator([
 					{ elementId: 'sign_up_textfield_first_name', onChangeFunction: firstNameOnChange },
 					{ elementId: 'sign_up_textfield_last_name', onChangeFunction: lastNameOnChange },
 					{ elementId: 'sign_up_textfield_user_name', onChangeFunction: userNameOnChange },
@@ -40,7 +40,7 @@
 				configurePasswordfield('sign_up_textfield_password');
 				configurePasswordfield('sign_up_textfield_password_verification');
 				configureDatepicker('sign_up_textfield_birth_date');
-				configureDropdownlist('sign_up_dropdownlist_genre');
+				configureDropdownlist('sign_up_dropdownlist_genre');*/
 			});
 			</script>
 		<% end template %>
