--- a/www/css/template.css
+++ b/www/css/template.css
@@ -464,6 +464,8 @@ div.problems_votes .number {
 		-2px 0px 8px rgba(51, 51, 51, 0.4);
 
 	border-bottom-style:none;
+	
+	height: 800px;
 }
 
 .fixed-title-wrapper{
