--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -472,6 +472,24 @@
 		    	<div class="navbar-inner">
 		        	<div class="container-fluid">
 						<a class="pull-left header_bar_logo" href="<% url "/" %>"></a>
+						<% if user_signed_in %>
+							<ul class="nav pull-left">
+				              <li id="notification-button" class="active">
+				                <a>Notificaciones</a>
+				                <div id="notification-panel">
+				                	<!-- TO BE FILLED WITH NOTIFICATIONS -->
+				                </div>
+				                <script type="text/javascript">
+				                function openNotificationDialog(){
+				                	$('#notification-panel').toggle();
+				                }
+								$('#notification-button').click(function(){
+									openNotificationDialog();
+								});
+				                </script>
+				              </li>						
+							</ul>
+						<% end %>
 						<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
 						<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 							<span class="icon-bar"></span>
@@ -508,6 +526,11 @@
 		        	</div>
 		     	</div>
 		    </div>
+		    <% if user_signed_in %>
+			    <script>
+			    	checkNotificationsPeriodically($('#notification-panel'));
+			    </script>
+			<% end %>
 		<% end template %>
 
 		<% template old_header_bar() %>
